search works kinda

--- a/app/partials/search.html
+++ b/app/partials/search.html
@@ -1,5 +1,17 @@
 <!-- We include the sidebar as it is shared across two screens. -->
 <ng-include src="'partials/dinner-sidebar.html'" ng-controller="DinnerCtrl"></ng-include>
 
+<input ng-model="query"/>
+<button ng-click="search(query)">Find</button>
+{{status}}
+<ul>
+ <li ng-repeat="dish in dishes">
+ <img ng-src="{{dish.ImageURL}}" class='searchImg'/>
+ {{dish.Title}}
+ <a ng-href="#/dish/{{dish.RecipeID}}">View more</a>
+ {{dish.Category}} {{dish.Subcategory}}
+ </li>
+</ul>
+
 <!-- TODO in Lab 5: Display the input box for search (you can ignore the type dropdown since BigOven does
 not support it in free version) and list all the dishes that match the search. -->
