--- a/app/partials/dinner-sidebar.html
+++ b/app/partials/dinner-sidebar.html
@@ -1,9 +1,22 @@
-People: <input type="number" ng-model="numberOfGuests" ng-change="setNumberOfGuest(numberOfGuests)"/>
+<div class='col-md-3' id='sideView'>
 
-<!-- TODO in Lab 5: Display the items on the menu with cost for each -->
+	<h2>My Dinner</h2>
+	<div>
+		People: <input type="number" ng-model="numberOfGuests" ng-change="setNumberOfGuest(numberOfGuests)"/>
+	</div>
+	<div id='dishList'>
+
+	</div>
+
+	<button ng-click='confirm()' id='confirm' class='btn btn-default btn-lg'>Confirm Dinner</button>
+
+	<table class='table'><tr><th>Dish name</th><th>Cost</th><td></td></tr>
+		<tr ng-repeat='dish in menu'>
+			<td>{{dish.Title}}</td>
+			<td>dishPrice</td>			<!-- Fix later-->
+			<td><span id='remove' class='glyphicon glyphicon-remove'> </span></td> 
+		</tr>
+	</table>
 
 
-<!-- Displaying number of guests both in input box and here is redundant. It is here only for the example
-purpose so you can see how some information from the model can be retrieved. In Lab 5 you will replace 
-this with Total price of the menu -->
-Total number of guest: {{getNumberOfGuests()}}
+</div>
