--- a/app/partials/search.html
+++ b/app/partials/search.html
@@ -3,6 +3,7 @@
 	<ng-include src="'partials/dinner-sidebar.html'" ng-controller="DinnerCtrl"></ng-include>
 
 	<div class='col-md-9' id='mainView'>
+		<div id='selectDish'>
 		<div class='row' id='search'>
 			<div class='col-md-12'>
 				<h3>Select Dish</h3>
@@ -26,7 +27,7 @@
 				 	</div>
 			</div>
 		</div>
-
+	</div>
 	</div>
 
 <!-- TODO in Lab 5: Display the input box for search (you can ignore the type dropdown since BigOven does
