--- a/app/partials/dish.html
+++ b/app/partials/dish.html
@@ -25,6 +25,7 @@
 							<td></td><td>SEK</td><td>{{getDishPrice()}}</td>
 						</tr>
 					</table>
+					<button ng-click='confirm()' type='button' class='btn btn-default' id='confirmDish'>Confirm Dish</button>
 				</div>
 			</div>
 		</div>
