--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,3 +1,18 @@
-<!-- TODO in Lab 5: there is not much to do on the home screen. Just arrange the layout so it
-looks a bit nicer. -->
-<a href="#/search" class="btn btn-primary">Create new dinner</a>
+
+ <body id="home">
+	<div class='container' id="homeContainer">
+		<div class="row">
+			<div class="col-md-12" id="headerHome"><h1>Homelette</h1> From the best chefs in the world directly into your kitchen
+			</div>
+		</div>
+
+		<div id="intro">
+			<h2>A Home Dinner Service</h2>
+			
+			<p>Lorem impsum dolor sit amet, consecteur adipsicing elit, sed do eisudmod tempor indcidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exertitation ullamco labris nisi ut aliquip.</p>
+
+			<p>Start quickly</p>
+			<a href='#/search' class="btn btn-default btn-lg">Create new dinner</a>
+
+		</div>
+	</div>
