--- a/app/partials/dish.html
+++ b/app/partials/dish.html
@@ -1,35 +1,38 @@
-<div class='row' id='bigContainer'>
+<div class='container'>
+	<ng-include src="'partials/header.html'"></ng-include>
 <!-- We include the sidebar as it is shared across two screens. -->
-	<ng-include src="'partials/dinner-sidebar.html'" ng-controller="DinnerCtrl"></ng-include>
-	<div class='col-md-9' id='mainView'>
-		<div id='dishBigView'>
-			<div class='row' id='dishView'>
-				<div class='col-md-6' id="dishText">
-					<h2>{{dish.Title}}</h2>
-					<img ng-src="{{dish.ImageURL}}" class='dishImg'/>
-					<p>{{dish.Description}}</p>
-					<a href="#/search" class="btn btn-default" id="dishBack"><span class='glyphicon glyphicon-chevron-left'>back to Select Dish</span></a>
-					<h2>Preparation</h2>
-					<p>{{dish.Instructions}}</p>
-				</div>
-				<div class='col-md-6' id='ingredientView'>
-					<h4>Ingredients for {{getNumberOfGuests()}} people</h4>
-					<table class='table'>
-						<tr ng-repeat='ingredient in dish.Ingredients'>
-							<td> {{round(ingredient.MetricQuantity *getNumberOfGuests())}} {{ingredient.MetricUnit}}</td>
-							<td> {{ingredient.Name}} </td>
-							<td>SEK</td>
-							<td>{{round(ingredient.MetricQuantity *getNumberOfGuests())}}</td>
-						</tr>
-						<tr>
-							<td></td><td></td><td>SEK</td><td>{{getDishPrice(dish)}}</td>
-						</tr>
-					</table>
-					<button ng-click='confirm(dish)' type='button' class='btn btn-default' id='confirmDish'>Confirm Dish</button>
+	<div class='row' id='bigContainer'>
+		<ng-include src="'partials/dinner-sidebar.html'" ng-controller="DinnerCtrl"></ng-include>
+		<div class='col-md-9' id='mainView'>
+			<div id='dishBigView'>
+				<div class='row' id='dishView'>
+					<div class='col-md-6' id="dishText">
+						<h2>{{dish.Title}}</h2>
+						<img ng-src="{{dish.ImageURL}}" class='dishImg'/>
+						{{setPending(dish)}}
+						<p>{{dish.Description}}</p>
+						<a href="#/search" class="btn btn-default" id="dishBack"><span class='glyphicon glyphicon-chevron-left'>back to Select Dish</span></a>
+						<h2>Preparation</h2>
+						<p>{{dish.Instructions}}</p>
+					</div>
+					<div class='col-md-6' id='ingredientView'>
+						<h4>Ingredients for {{getNumberOfGuests()}} people</h4>
+						<table class='table'>
+							<tr ng-repeat='ingredient in dish.Ingredients'>
+								<td> {{round(ingredient.MetricQuantity *getNumberOfGuests())}} {{ingredient.MetricUnit}}</td>
+								<td> {{ingredient.Name}} </td>
+								<td>SEK</td>
+								<td>{{round(ingredient.MetricQuantity *getNumberOfGuests())}}</td>
+							</tr>
+							<tr>
+								<td></td><td></td><td>SEK</td><td>{{getDishPrice(dish)}}</td>
+							</tr>
+						</table>
+						<button ng-click='confirm(dish)' type='button' class='btn btn-default' id='confirmDish'>Confirm Dish</button>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- TODO in Lab 5: Display the dish information including image, Description, 
-Instructions, Ingredients and total cost. -->
+
