--- a/app/partials/dinner-sidebar.html
+++ b/app/partials/dinner-sidebar.html
@@ -16,8 +16,8 @@
 			<td>SEK {{getDishPrice(dish)}}</td>
 			<td><button ng-click='remove(dish.RecipeID)'> <span id='remove' class='glyphicon glyphicon-remove'> </span></button></td> 
 		</tr>
-		<tr><td>Pending</td><td>SEK {{getPending}}</td><td></tr></tr>
-		<tr><td></td><td>SEK {{getTotalMenuPrice}}</td><td></tr></tr>
+		<tr><td>Pending</td><td ng-controller="DishCtrl">SEK {{getDishPrice(dish)}}</td><td></tr></tr>
+		<tr><td></td><td>SEK {{totalMenuPrice()}}</td><td></tr></tr>
 	</table>
 
 	<a href='#/confirm' id='confirm' class='btn btn-default btn-lg'>Confirm Dinner</a>
